--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,17 +3,17 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "https://res.cloudinary.com/dt4w3q95b/image/upload/v1728328974/logo_ohadef.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "https://res.cloudinary.com/dt4w3q95b/image/upload/v1728328974/logo_ohadef.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "https://res.cloudinary.com/dt4w3q95b/image/upload/v1728328974/logo_ohadef.png",
       "type": "image/png",
       "sizes": "512x512"
     }
